# pyleans

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
.claude/: coding-rules.md  settings.json  settings.local.template.json  testing-rules.md
counter-app/: pyproject.toml
counter-app/counter/: __init__.py  main.py
counter-app/counter_app/: __main__.py  counter_grain.py  grains.py  main.py
counter-app/test/: test_counter_app.py  test_counter_grain.py
counter-client/: pyproject.toml
counter-client/counter_client/: main.py
counter-client/test/: test_counter_client.py
counter_app/: counter_grain.py  main.py
counter_app/test/: test_counter_app.py  test_counter_grain.py
counter_client/: __init__.py  __main__.py  main.py
counter_client/test/: test_counter_client.py
docs/: beyond-stateless-talk.md  hexagonal-architecture.md  orleans-advanced.md  orleans-cluster.md  orleans-grains.md  orleans-main.md  orleans-networking.md  orleans-persistence.md  plan.md  pyleans-plan.md
docs/adr/: README.md  adr-cluster-access-boundary.md  adr-cluster-transport.md  adr-concurrency-model.md  adr-counter-sample-scope.md  adr-dependency-injection.md  adr-dev-mode.md  adr-graceful-shutdown.md  adr-grain-base-class.md  adr-grain-directory.md  adr-grain-interfaces.md  adr-library-vs-cli.md  adr-logging.md  adr-naming-convention.md  adr-network-port-for-testability.md  adr-package-split.md  adr-provider-interfaces.md  adr-serialization.md  adr-single-activation-cluster.md  adr-state-declaration.md  adr-template.md
docs/architecture/: consistent-hash-ring.md  pyleans-transport.md
docs/domain/: 0001-grains-are-an-active-cache.md  README.md  template.md
docs/orleans-architecture/: orleans-streaming.md
docs/orleans-sample/: .gitignore  Demo.sln  Makefile  README.md  docker-compose.yaml  rolling-upgrade.sh
docs/orleans-sample/Interfaces/: IField.cs  IGrid.cs  Interfaces.csproj
docs/orleans-sample/JsonFileStorage/: GrainIdExtensions.cs  GrainStorageBase.cs  GrainStorageSiloBuilderExtensions.cs  JsonFileStorage.csproj  JsonFileStorageProvider.cs
docs/orleans-sample/Logic/: Field.cs  Grid.cs  Logic.csproj
docs/orleans-sample/Node/: Node.cs  Node.csproj
docs/orleans-sample/Web/: Web.cs  Web.csproj  appsettings.Development.json  appsettings.json
docs/tasks/: README.md  task-01-01-project-setup.md  task-01-02-core-types.md  task-01-03-errors.md  task-01-04-serialization.md  task-01-05-provider-abcs.md  task-01-06-grain-decorator.md  task-01-07-grain-base-class.md  task-01-08-grain-runtime.md  task-01-09-grain-reference.md  task-01-10-di-container.md  task-01-11-file-storage.md  task-01-12-yaml-membership.md  task-01-13-grain-timers.md  task-01-14-in-memory-streaming.md  task-01-15-network-port.md  task-01-15-silo.md  task-01-16-in-memory-network-simulator.md  task-01-17-counter-app.md  task-01-17-silo.md  task-01-18-counter-client.md  task-01-18-counter-grain.md  task-01-19-counter-app.md  task-01-20-counter-client.md  task-01-21-network-migration.md  task-01-project-setup.md  task-02-01-cluster-identity.md  task-02-02-consistent-hash-ring.md  task-02-03-placement-strategies.md  task-02-04-transport-abcs.md  task-02-05-wire-protocol.md  task-02-06-silo-connection.md  task-02-07-silo-connection-manager.md  task-02-08-tcp-cluster-transport.md  task-02-09-membership-table-extensions.md  task-02-10-file-locking-membership.md  task-02-11-failure-detector.md  task-02-12-grain-directory-port.md  task-02-13-distributed-grain-directory.md  task-02-14-directory-cache.md  (+50 more)
pyleans/: pyproject.toml
pyleans/pyleans/: __init__.py  errors.py  grain.py  grain_base.py  identity.py  reference.py  serialization.py
pyleans/pyleans/client/: __init__.py  cluster_client.py
pyleans/pyleans/gateway/: __init__.py  listener.py  protocol.py
pyleans/pyleans/providers/: __init__.py  storage.py  streaming.py
pyleans/pyleans/server/: __init__.py  container.py  grains.py  runtime.py  silo.py  silo_management.py  string_cache_grain.py  timer.py
pyleans/pyleans/server/providers/: __init__.py  file_storage.py  markdown_table_membership.py  memory_stream.py  yaml_membership.py
pyleans/test/: conftest.py  test_container.py  test_errors.py  test_file_storage.py  test_gateway.py  test_grain.py  test_grain_base.py  test_identity.py  test_markdown_table_membership.py  test_memory_stream.py  test_providers.py  test_reference.py  test_runtime.py  test_serialization.py  test_silo.py  test_silo_management.py  test_string_cache_grain.py  test_timer.py  test_yaml_membership.py
src/: __init__.py
src/counter_app/: README.md  __main__.py  answer_grain.py  counter_grain.py  main.py
src/counter_app/test/: test_counter_app.py  test_counter_grain.py
src/counter_client/: __main__.py  main.py
src/counter_client/test/: test_counter_client.py
src/pyleans/: pyproject.toml
src/pyleans/pyleans/: __init__.py  cluster.py  errors.py  grain.py  grain_base.py  identity.py  reference.py
src/pyleans/test/: conftest.py  test_asyncio_network.py  test_cluster.py  test_cluster_hash_ring.py  test_cluster_placement.py  test_container.py  test_directory_cache.py  test_directory_rebuild.py  test_distributed_directory.py  test_failure_detector.py  test_file_lock.py  test_file_storage.py  test_gateway.py  test_gateway_protocol.py  test_grain.py  (+29 more)
tasks/: task-01-project-setup.md  task-02-core-types.md  task-03-errors.md  task-04-serialization.md  task-05-provider-abcs.md  task-06-grain-decorator.md  task-07-grain-base-class.md  task-07-grain-runtime.md  task-08-grain-reference.md  task-08-grain-runtime.md  task-09-di-container.md  task-09-grain-reference.md  task-10-di-container.md  task-10-file-storage.md  task-11-file-storage.md  task-11-yaml-membership.md  task-12-grain-timers.md  task-12-yaml-membership.md  task-13-grain-timers.md  task-13-in-memory-streaming.md  task-14-in-memory-streaming.md  task-14-silo.md  task-15-counter-grain.md  task-15-silo.md  task-16-counter-app.md  task-16-counter-grain.md  task-17-counter-app.md  task-17-counter-client.md  task-18-counter-client.md  tasklist.md
(+63 files in other folders)
