[project]
name = "pyleans"
version = "0.1.0"
description = "A Python implementation of the Virtual Actor pattern inspired by Microsoft Orleans"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "dependency-injector>=4.41",
    "orjson>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyleans"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
